tests/b_invalid/checking_trait.out
tests/b_invalid/checking_trait.ri:24:14: error: type `int32` does not implement trait `ToStr`
   24 |     my_print(1); // FAIL
      |              ^
      = note: in argument `v` of function `my_print`
rivetc: error: could not compile module `checking_trait`, aborting due to previous error