tests/b_invalid/checking_trait.ri
trait ToStr {
    func to_str1(&self) -> string;
}

func my_print(v: ToStr) {
    _ = v.to_str1();
}

extend string < ToStr {
    func to_str1(self) -> string {
        return self;
    }
}

extend bool < ToStr {
    func to_str1(&self) -> string {
        return if self.* { "true" } else { "false" };
    }
}

func main() {
    my_print(""); // OK
    my_print(true); // OK
    my_print(1); // FAIL
}
